native/include/jyppx/cuda/runtime.h

JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_init_device(int32_t device, uint32_t device_flags, uint32_t flags);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_launch_kernel(const void* function, JYPPX_CudaDim3 grid_dim, JYPPX_CudaDim3 block_dim, void** arguments, size_t shared_memory_bytes, JYPPX_CudaStream* stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_launch_cooperative_kernel(const void* function, JYPPX_CudaDim3 grid_dim, JYPPX_CudaDim3 block_dim, void** arguments, size_t shared_memory_bytes, JYPPX_CudaStream* stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_launch_host_func_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_launch_host_func_v2_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_host_unregister(JYPPX_CudaPinnedMemory* memory);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_upload(JYPPX_CudaGraphExec* graph_exec, JYPPX_CudaStream* stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_remove_dependency_safe(JYPPX_CudaGraph* graph, uintptr_t from_node, uintptr_t to_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_type_safe(uintptr_t node, int32_t* out_type);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_dependency_count_safe(uintptr_t node, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_dependency_safe(uintptr_t node, size_t index, uintptr_t* out_dependency_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_dependent_count_safe(uintptr_t node, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_dependent_safe(uintptr_t node, size_t index, uintptr_t* out_dependent_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_dependencies_v2_count_safe(uintptr_t node, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_dependency_v2_safe(uintptr_t node, size_t index, uintptr_t* out_dependency_node, JYPPX_CudaGraphEdgeData* out_edge_data);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_dependent_nodes_v2_count_safe(uintptr_t node, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_dependent_node_v2_safe(uintptr_t node, size_t index, uintptr_t* out_dependent_node, JYPPX_CudaGraphEdgeData* out_edge_data);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_remove_dependency_v2_safe(JYPPX_CudaGraph* graph, uintptr_t from_node, uintptr_t to_node, const JYPPX_CudaGraphEdgeData* edge_data);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_find_in_clone_safe(uintptr_t original_node, JYPPX_CudaGraph* cloned_graph, uintptr_t* out_cloned_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_kernel_library_set_kernel_attribute_for_device_safe(JYPPX_CudaKernelLibrary* library, const char* kernel_name, int32_t attribute, int32_t value, int32_t device);
/* END CUDA FIFTY-SECOND BATCH PRIMARY EXECUTION CONTEXT */

/* BEGIN CUDA FORTY-FOURTH BATCH GRAPH NODE PARAMETER DESCRIPTORS */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memset_node_get_params_safe(uintptr_t node, JYPPX_CudaGraphMemsetNodeParams* out_params);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memset_node_set_params_safe(uintptr_t node, JYPPX_CudaMemory* destination, uint32_t value, size_t count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memcpy_node_set_params_1d_host_to_device_safe(uintptr_t node, JYPPX_CudaMemory* destination, JYPPX_CudaPinnedMemory* source, size_t count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_is_in_graph_safe(JYPPX_CudaGraph* graph, uintptr_t node, JYPPX_Boolean* out_is_in_graph);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_local_id_safe(uintptr_t node, uint32_t* out_node_id);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_tools_id_safe(uintptr_t node, uint64_t* out_tools_node_id);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memcpy_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memcpy_node_set_params_from_symbol_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memcpy_node_set_params_to_symbol_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memset_node_get_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_memset_node_set_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_containing_graph_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_dependencies_v2_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_dependent_nodes_v2_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_node_get_params_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_remove_dependencies_v2_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_retain_user_object_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_release_user_object_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_import_external_memory_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_import_external_semaphore_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_ipc_close_mem_handle_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_ipc_get_event_handle_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_ipc_get_mem_handle_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_ipc_open_event_handle_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_ipc_open_mem_handle_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_kernel_set_attribute_for_device_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_green_ctx_create_deferred(void);