src/JYPPX.CudaSharp/Internal/Interop/Generated/GeneratedCudaManifestNativeMethods.g.cs


    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memcpy_node_set_params_1d_host_to_device_safe(UIntPtr node, SafeCudaMemoryHandle destination, SafeCudaPinnedMemoryHandle source, UIntPtr count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memcpy_node_set_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memcpy_node_set_params_from_symbol_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memcpy_node_set_params_to_symbol_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memset_node_get_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memset_node_get_params_safe(UIntPtr node, out NativeCudaGraphMemsetNodeParams out_params);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memset_node_set_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_memset_node_set_params_safe(UIntPtr node, SafeCudaMemoryHandle destination, uint value, UIntPtr count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_find_in_clone_safe(UIntPtr original_node, SafeCudaGraphHandle cloned_graph, out UIntPtr out_cloned_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_containing_graph_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_dependencies_v2_count_safe(UIntPtr node, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_dependencies_v2_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_dependency_count_safe(UIntPtr node, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_dependency_safe(UIntPtr node, UIntPtr index, out UIntPtr out_dependency_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_dependency_v2_safe(UIntPtr node, UIntPtr index, out UIntPtr out_dependency_node, out NativeCudaGraphEdgeData out_edge_data);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_dependent_count_safe(UIntPtr node, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_dependent_node_v2_safe(UIntPtr node, UIntPtr index, out UIntPtr out_dependent_node, out NativeCudaGraphEdgeData out_edge_data);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_dependent_nodes_v2_count_safe(UIntPtr node, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_dependent_nodes_v2_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_dependent_safe(UIntPtr node, UIntPtr index, out UIntPtr out_dependent_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_local_id_safe(UIntPtr node, out uint out_node_id);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_params_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_tools_id_safe(UIntPtr node, out ulong out_tools_node_id);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_get_type_safe(UIntPtr node, out int out_type);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_node_is_in_graph_safe(SafeCudaGraphHandle graph, UIntPtr node, out int out_is_in_graph);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_release_user_object_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_remove_dependencies_v2_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_remove_dependency_safe(SafeCudaGraphHandle graph, UIntPtr from_node, UIntPtr to_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_remove_dependency_v2_safe(SafeCudaGraphHandle graph, UIntPtr from_node, UIntPtr to_node, in NativeCudaGraphEdgeData edge_data);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_retain_user_object_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_upload(SafeCudaGraphExecHandle graph_exec, SafeCudaStreamHandle stream);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_green_ctx_create_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_host_unregister(IntPtr memory);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_import_external_memory_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_import_external_semaphore_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_init_device(int device, uint device_flags, uint flags);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_ipc_close_mem_handle_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_ipc_get_event_handle_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_ipc_get_mem_handle_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_ipc_open_event_handle_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_ipc_open_mem_handle_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_kernel_set_attribute_for_device_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_kernel_library_set_kernel_attribute_for_device_safe(SafeCudaKernelLibraryHandle library, IntPtr kernel_name, int attribute, int value, int device);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_launch_cooperative_kernel(IntPtr function, NativeCudaDim3 grid_dim, NativeCudaDim3 block_dim, IntPtr arguments, UIntPtr shared_memory_bytes, SafeCudaStreamHandle stream);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_launch_host_func_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_launch_host_func_v2_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_launch_kernel(IntPtr function, NativeCudaDim3 grid_dim, NativeCudaDim3 block_dim, IntPtr arguments, UIntPtr shared_memory_bytes, SafeCudaStreamHandle stream);
